# n2

./: .gitignore  Cargo.toml  README.md  dprint.json  git-pre-commit  rust-toolchain.toml
.github/workflows/: ci.yml  fmt.yml  rust.yml
benches/: .gitignore  bench.rs  canon.rs  loader.rs  parse.rs
doc/: comparison.md  design_notes.md  development.md  missing.md
read-file/: Cargo.toml
read-file/src/: main.rs
src/: canon.rs  concurrent_linked_list.rs  db.rs  densemap.rs  depfile.rs  eval.rs  file_loader.rs  file_pool.rs  fs.rs  gen_lookup_table.py  graph.rs  hash.rs  intern.rs  json_progress.rs  lib.rs  load.rs  main.rs  parse.rs  process.rs  process_posix.rs  process_win.rs  progress.rs  progress_dumb.rs  progress_fancy.rs  run.rs  scanner.rs  signal.rs  smallmap.rs  task.rs  terminal.rs  thread_pool.rs  trace.rs  work.rs
src/file_loader/: ref_cell_hash_map.rs
src/sketches/: graph.rs
tests/: basic.rs  build.rs  e2e_test.rs  regen.rs
tests/e2e/: basic.rs  bindings.rs  directories.rs  discovered.rs  include_and_subninja.rs  loader_memmap.rs  missing.rs  mod.rs  regen.rs  validations.rs
tests/manual/: .gitignore
tests/manual/clang-cl/: .gitignore  README.md  build.ninja  test.c  test.h
tests/manual/fdtest/: build.ninja  fdtest.py
tests/manual/prints/: README.md  build.ninja  prints.bat  prints.sh
tests/snapshot/: .gitattributes  .gitignore  README.md
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode/src/: extension.ts
