[package]
name = "n2"
version = "0.1.0"
categories = ["development-tools", "development-tools::build-utils"]
edition = "2018"
exclude = [".github/*", ".vscode/*"]
homepage = "https://github.com/evmar/n2"
keywords = ["ninja", "build"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evmar/n2"
# https://github.com/evmar/n2/issues/74
rust-version = "1.70.0"
description = "a ninja compatible build system"

[dependencies]
anyhow = "1.0"
argh = "0.1.10"
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Pipes",
    "Win32_System_Threading",
]

[target.'cfg(not(any(windows, target_arch = "wasm32")))'.dependencies]
jemallocator = "0.5.0"

[dev-dependencies]
tempfile = "3.6.0"

[profile.release]
debug = true
lto = true
