[package]
name = "n2"
version = "0.1.0"
categories = ["development-tools", "development-tools::build-utils"]
edition = "2021"
exclude = [".github/*", ".vscode/*"]
homepage = "https://github.com/evmar/n2"
keywords = ["ninja", "build"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evmar/n2"
# https://github.com/evmar/n2/issues/74
# Note: if we bump this, may need to bump .github/workflows/ci.yml version too.
rust-version = "1.81.0"
description = "a ninja compatible build system"

[dependencies]
anyhow = "1.0"
lexopt = "0.3.0"
libc = "0.2"
rustc-hash = "1.1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Pipes",
  "Win32_System_Threading",
]

[target.'cfg(not(any(windows, target_arch = "wasm32")))'.dependencies]
jemallocator = "0.5.0"

[dev-dependencies]
divan = "0.1.16"
tempfile = "3.6.0"

[profile.release]
debug = true
lto = true

[[bench]]
name = "parse"
harness = false

# For Criterion reasons, we need bench=false for our lib/bin.
[lib]
bench = false
[[bin]]
name = "n2"
bench = false
